ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-ingress
  
spec:
  ingressClassName: nginx
  rules:
    - host: lugx.local
      http:
        paths:
          # Order Service
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8001

          # Analytics Service
         # - path: /analytics/?(.*)
          #  pathType: ImplementationSpecific
           # backend:
            #  service:
             #   name: analytics-service
              #  port:
               #   number: 80

          # Game Service
          - path: /games
            pathType: Prefix
            backend:
              service:
                name: game-service
                port:
                  number: 8000

          # Static assets (CSS, JS, images, fonts, etc.)
          - path: /assets
            pathType: Prefix
            backend:
              service:
                name: lugx-service
                port:
                  number: 80
          - path: /vendor
            pathType: Prefix
            backend:
              service:
                name: lugx-service
                port:
                  number: 80
          - path: /js
            pathType: Prefix
            backend:
              service:
                name: lugx-service
                port:
                  number: 80

          # Fallback for all other files/pages (index.html, contact.html, shop.html, etc.)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lugx-service
                port:
                  number: 80
